--- a/Dockerfile-scratch
+++ b/Dockerfile-scratch
@@ -5,7 +5,7 @@ RUN go mod vendor
 RUN CGO_ENABLED=1 GOOS=linux go build --ldflags "-extldflags -static" -a -installsuffix cgo -o app .
 
 FROM scratch
-RUN apk --no-cache add ca-certificates
+#RUN apk --no-cache add ca-certificates
 WORKDIR /root/
 COPY ./app /root
 COPY --from=builder /go/src/app/app ./
