--- a/Dockerfile-scratch
+++ b/Dockerfile-scratch
@@ -1,11 +1,12 @@
-FROM golang:1.16 AS builder
+FROM golang:alpine AS builder
+RUN apk add -U --no-cache ca-certificates
 WORKDIR /go/src/app
 COPY ./app /go/src/app
 RUN go mod vendor
 RUN CGO_ENABLED=1 GOOS=linux go build --ldflags "-extldflags -static" -a -installsuffix cgo -o app .
 
 FROM scratch
-#RUN apk --no-cache add ca-certificates
+COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 WORKDIR /root/
 COPY ./app /root
 COPY --from=builder /go/src/app/app ./
